syntax = "proto3";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  message Data {
    string access_token = 1;
    string refresh_token = 2;
  }
  Data data = 1;
}

message TokenRequest {
  string token = 1;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string season = 4;
}

message RegisterWithTokenRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string token = 4;
}

message RegisterResponse {
    string club_name = 1;
    string message = 2;
}

message EmailRequest {
  string email = 1;
}

message GetProfileResponse {
  message Data {
    string name = 1;
    string email = 2;
    string phone = 3;
    string address = 4;
    string club_id = 5;
    string position = 6;
  }
  Data data = 1;
}

message UpdateProfileRequest {
  string name = 1;
  string phone = 2;
  string address = 3;
  string position = 4;
}

message DeactivateProfileRequest {
  string email = 1;
  string password = 2;
}

